# flatbuffers-rs

./: Cargo.toml
fbs-codegen/: Cargo.toml
fbs-codegen/examples/: example.rs
fbs-codegen/src/: builder.rs  lib.rs  types.rs
fbs-parser/: Cargo.toml
fbs-parser/src/: lexer.rs  lib.rs
fbs-parser/tests/: test.fbs  test2.fbs
