[package]
name = "fbs-codegen"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
fbs-parser = { path = "../fbs-parser" }
thiserror = "1.0.13"
log = "0.4.8"
indexmap = "1.3.2"
memmap = { version = "0.7.0", optional = true }
env_logger = { version = "0.7.1", optional = true }
byteorder = "1.3.4"

[features]
example = ["memmap", "env_logger"]
default = ["example"]
